solved material icon, solved select-option size solved missing border top thead solved modal logout button container width reposition tombol kembali

--- a/assets/css/bootstrap.ba.css
+++ b/assets/css/bootstrap.ba.css
@@ -2092,8 +2092,9 @@ th {
 .table > caption + thead > tr:first-child > td,
 .table > colgroup + thead > tr:first-child > td,
 .table > thead:first-child > tr:first-child > td {
-  border-top: 0;
+  border-top: 1; /*solved missing border top*/
 }
+
 .table > tbody + tbody {
   border-top: 2px solid #ddd;
 }
